[package]
name = "elfget"
version = "0.1.0"
edition = "2021"
authors = ["Rinat Sabitov <rinat.sabitov@gmail.com>"]
description = "Manage KernelCare patches for your kernel"
license-file = "LICENSE.TXT"
readme = "README.md"

[dependencies]
byteorder = "1.4.3"
structopt = "0.3.25"

[profile.release]
opt-level = "z"  
lto = true
codegen-units = 1
